# old-2020-oac

./: README.md  pyproject.toml
aoc/: 01a.py  01b.py  02a.py  02b.py  03a.py  03b.py  04a.py  04b.py  05a.py  05b.py  06a.py  06b.py  07a.py  07b.py  08a.py  08b.py  09a.py  09b.py  10a.py  10b.py  11a.py  11b.py  12a.py  12b.py  13a.py  13b.py  14a.py
input/: 13_example.data
